Round Winner Bug Fixed | Number Keyboard on mobile when inputing score improved | Update on TODO List to improve the code

--- a/src/components/Logged/Tabs/Score/ScoreList.module.scss
+++ b/src/components/Logged/Tabs/Score/ScoreList.module.scss
@@ -7,5 +7,9 @@
 }
 
 .last-round-winner {
-    background: linear-gradient(-45deg, transparent 97%, #ffb300 97%);
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    background: linear-gradient(-45deg, transparent 50%, #ffb300 50%);
+    // z-index: 100;
 }
